--- a/assets/css/envelope.css
+++ b/assets/css/envelope.css
@@ -1,5 +1,5 @@
 :root {
-  background: #f5f6fa;
+  background: #dff6ff;
 }
 
 body {
@@ -11,7 +11,7 @@ h1 {
 }
 
 .header {
-  background-color: #3778f1;
+  background-color: #06283d;
   padding: 30px 40px;
   color: white;
   text-align: center;
@@ -29,6 +29,10 @@ h1 {
   align-items: center;
 }
 
+.harcamalar {
+  text-align: center;
+}
+
 .btn {
   font-size: large;
   display: inline-block;
@@ -39,4 +43,14 @@ h1 {
   transition: all 200ms ease-in;
   cursor: pointer;
   box-shadow: inset 0 0 10px 2px rgba(143, 143, 143, 0.753);
+}
+
+.buttonpng {
+  float: right;
+}
+
+.plus {
+  width: 3em;
+  height: auto;
+  float: right;
 }
