--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,39 +17,46 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Bütçe</title>
   </head>
   <body>
     <div id="myDIV" class="header">
       <h1>Personal Budget</h1>
+      <a href="/envelopes/create"
+        ><button type="button" class="createbutton">Create Envelope</button></a
+      >
     </div>
     <div class="myTable">
       <table style="margin: auto">
-        <thead>
-          <tr></tr>
-        </thead>
         <tbody>
           <% if(data.length){ for(var i = 0; i< data.length; i++) {%>
           <tr>
-            <td class="nameTable"><%= data[i].name%></td>
+            <td class="nameTable">
+              <a class="asd123" href="/envelopes/<%= data[i].id%>"
+                ><%= data[i].name%></a
+              >
+            </td>
             <td class="nameBudget"><%= data[i].budget%> ₺</td>
 
             <td class="nameX">
-              <svg
-                class="deletebutton"
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="50"
-                height="50"
-                viewBox="0 0 50 50"
-                style="fill: #000000"
-              >
-                <path
-                  d="M 25 2 C 12.309534 2 2 12.309534 2 25 C 2 37.690466 12.309534 48 25 48 C 37.690466 48 48 37.690466 48 25 C 48 12.309534 37.690466 2 25 2 z M 25 4 C 36.609534 4 46 13.390466 46 25 C 46 36.609534 36.609534 46 25 46 C 13.390466 46 4 36.609534 4 25 C 4 13.390466 13.390466 4 25 4 z M 32.990234 15.986328 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.990234 15.986328 z"
-                ></path>
-              </svg>
-              <a href="/api/v1/envelopes/<%= data[i].id%>">
+              <a href="/envelopes/<%= data[i].id%>/delete">
+                <svg
+                  class="deletebutton"
+                  xmlns="http://www.w3.org/2000/svg"
+                  x="0px"
+                  y="0px"
+                  width="50"
+                  height="50"
+                  viewBox="0 0 50 50"
+                  style="fill: #000000"
+                  onclick="return confirm('Emin misin?')"
+                >
+                  <path
+                    d="M 25 2 C 12.309534 2 2 12.309534 2 25 C 2 37.690466 12.309534 48 25 48 C 37.690466 48 48 37.690466 48 25 C 48 12.309534 37.690466 2 25 2 z M 25 4 C 36.609534 4 46 13.390466 46 25 C 46 36.609534 36.609534 46 25 46 C 13.390466 46 4 36.609534 4 25 C 4 13.390466 13.390466 4 25 4 z M 32.990234 15.986328 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.990234 15.986328 z"
+                  ></path>
+                </svg>
+              </a>
+              <a href="/envelopes/<%= data[i].id%>/edit">
                 <svg
                   class="editButton"
                   xmlns="http://www.w3.org/2000/svg"
