--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,14 @@ h1 {
   text-decoration: none;
 }
 
+.logout {
+  text-align: left;
+  font-size: 18px;
+  transition: 0.2s;
+  color: #47b5ff;
+  text-shadow: 2px 2px #47b5ff;
+}
+
 .createbutton {
   background-color: #00adb5;
   color: #fff;
