--- a/views/main.ejs
+++ b/views/main.ejs
@@ -22,6 +22,9 @@
   <body>
     <div id="myDIV" class="header">
       <h1>Personal Budget</h1>
+      <div class="logout">
+        <a href="/user/logout" style="text-decoration: none">Çıkış Yap</a>
+      </div>
       <a href="/envelopes/create"
         ><button type="button" class="createbutton">Create Envelope</button></a
       >
