--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,13 +17,13 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
-    <title>Bütçe</title>
+    <title>Budget</title>
   </head>
   <body>
     <div id="myDIV" class="header">
       <h1>Personal Budget</h1>
       <div class="logout">
-        <a href="/user/logout" style="text-decoration: none">Çıkış Yap</a>
+        <a href="/user/logout" style="text-decoration: none">Log out</a>
       </div>
       <a href="/envelopes/create"
         ><button type="button" class="createbutton">Create Envelope</button></a
