--- a/views/create.ejs
+++ b/views/create.ejs
@@ -17,7 +17,7 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Budget</title>
   </head>
   <body>
     <div id="myDIV" class="header">
