--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Budget</title>
   </head>
   <body>
     <h1>Login</h1>
@@ -40,7 +40,7 @@
           type="text"
           name="username"
           id="username"
-          placeholder="Kullanıcı Adı"
+          placeholder="Username"
           required
         />
       </div>
@@ -49,7 +49,7 @@
           type="password"
           name="password"
           id="password"
-          placeholder="Şifre"
+          placeholder="Password"
           required
         />
       </div>
@@ -57,7 +57,7 @@
       <div>
         <input type="submit" value="Login" />
       </div>
-      <a href="/user/register">Kayıt Ol</a>
+      <a href="/user/register">Register</a>
     </form>
   </body>
 </html>
